--- a/livekit-api/Cargo.toml
+++ b/livekit-api/Cargo.toml
@@ -10,6 +10,6 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 livekit-protocol = { path = "../livekit-protocol", version = "0.1.0" }
 sha2 = "0.10.6"
-reqwest = { version = "0.11", default-features=false, features=["json", "rustls", "rustls-tls"] }
+reqwest = { version = "0.11.18", default-features=false, features=["json", "rustls-tls"] }
 url = "2.3.1"
 prost = "0.11.9"
